test/corpus/main.txt
==================
Main
==================

#define macro MAIN() = takes (0) returns (0) {
    0x00 calldataload 0xE0 shr
    dup1 0x55241077 eq set jumpi
    
    set:
        SET_VALUE()
}

---

(source_file
  (definition
    (keyword_definition
      (def_val)
      (keyword)
      (identifier)
      (parameters)
      (val_parameters
        (keyword)
        (parameters
          (parameter)
        )
      )
      (val_parameters
        (keyword)
        (parameters
          (parameter)
        )
      )
      (block
        (hex)
        (opcode)
        (hex)
        (opcode)
        
        (opcode)
        (hex)
        (opcode)
        (label)
        (opcode)
        
        (label)
        (macro_call
          (identifier)
        )
      )
    )
  )
)
