test/corpus/store.txt
==================
Store
==================

#define macro SET_VALUE() = takes (0) returns (0) {
    0x04 calldataload
    [VALUE_LOCATION]
    sstore
}

---

(source_file
  (definition
    (keyword_definition
      (def_val)
      (keyword)
      (identifier)
      (parameters)
      (val_parameters
        (keyword)
        (parameters
          (parameter)
        )
      )
      (val_parameters
        (keyword)
        (parameters
          (parameter)
        )
      )
      (block
        (hex)
        (opcode)
        
        (const_access
          (identifier)
        )
        
        (opcode)
      )
    )
  )
)